--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/logoenfp.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="description" content="Crea tu ENFP CARD, obten tu card para cualquier cosa">
+    <!-- <meta name="description" content="Crea tu ENFP CARD, obten tu card para cualquier cosa">
     <meta http-equiv="refresh" content="0; url=https://enfpcard.vercel.app/">
-    <meta name="keywords" content="card, enfp, MBTI, excitable">
+    <meta name="keywords" content="card, enfp, MBTI, excitable"> -->
 
     <title>ENFPanitas CARD</title>
   </head>
