--- a/index.html
+++ b/index.html
@@ -2,14 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logoenfp.png" />
+    <link rel="icon" type="image/svg+xml" href="/logobb.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- <meta name="description" content="Crea tu ENFP CARD, obten tu card para cualquier cosa">
-    <meta http-equiv="refresh" content="0; url=https://enfpcard.vercel.app/">
-    <meta name="keywords" content="card, enfp, MBTI, excitable"> -->
-
-    <title>ENFPanitas CARD</title>
+    <title>Inge waifu card - POE</title>
   </head>
   <body>
     <div id="root"></div>
