--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="refresh" content="0; url=https://enfpcard.vercel.app/">
     <meta name="keywords" content="card, enfp, MBTI, excitable"> -->
 
-    <title>ENFPanitas CARD</title>
+    <title>ENFPanitas - CARD</title>
   </head>
   <body>
     <div id="root"></div>
